--- a/index.css
+++ b/index.css
@@ -125,7 +125,7 @@ table {
 
 /* 위의 코드는 css 초기화 설정 */
 header {
-  position: sticky;
+  position: relative;
   height: 100px;
   background-color: #d9dadb;
 }
@@ -141,17 +141,19 @@ header h1 {
   position: relative;
   z-index: 1;
   width: 300px;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
 }
+
 .dropdown-toggle {
   width: 100%;
   height: 50px;
   padding: 0 16px;
-  line-height: 50px;
+  line-height: 40px;
   color: rgba(133, 136, 150, 0.5);
   text-align: left;
   border: 1px solid rgba(224, 226, 231, 0.75);
   border-radius: 6px;
+  margin-top: 2px;
   transition: border-color 100ms ease-in;
 }
 
@@ -163,9 +165,35 @@ header h1 {
 .dropdown-toggle:active {
   border-color: rgba(224, 226, 231, 1);
 }
-.dropdown-content {
-  display: none;
+
+.dropdown-menu {
   position: absolute;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 2;
+  left: 0;
+  width: 100%;
+  max-height: 0;
+  overflow: hidden;
+  background-color: #fff;
+  border: 1px solid transparent;
+  border-radius: 6px;
+  transition: border-color 200ms ease-in, padding 200ms ease-in,
+    max-height 200ms ease-in, box-shadow 200ms ease-in;
+}
+
+.dropdown-menu.show {
+  max-height: 280px;
+  border-color: rgba(224, 226, 231, 0.5);
+  box-shadow: 0 4px 9px 0 rgba(63, 65, 80, 0.1);
+}
+
+.dropdown-option {
+  width: 100%;
+  height: 44px;
+  padding: 0 16px;
+  line-height: 44px;
+  text-align: left;
+}
+
+.dropdown-option:hover {
+  background-color: #f8f9fa;
 }
